# pip-help

./: .gitignore  README.md  pyproject.toml
.github/actions/build_action/: action.yml
.github/actions/check_installation/: action.yml
.github/actions/lint_test_action/: action.yml
.github/workflows/: check_installation.yml  github_workflow.yml  publish_pypi.yml  pypi_publish.yml
src/pip_help/: main.py  pip_func.py
tests/: test.py
