[project]
name = "pip-help"
version = "0.1.0"
description = "pip-help is a command line tool for temporarily installing packages."
readme = "README.md"
authors = [
    { name = "Lokesh Pawar", email = "lokesh.pawar@dozee.io" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pip-help = "pip_help.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "pytest>=8.3.4",
]
